# Gmail-Helper

./: .gitignore  README.md  gmailHelper.py  pyproject.toml
src/email_classifier/: cache.py  classifier.py  cli.py  config.py  gmail.py  models.py  plotter.py
tests/: test_cache.py  test_classifier.py  test_config.py  test_gmail.py  test_models.py  test_plotter.py
